# MPMonitorGUI

./: .gitignore  CMakeLists.txt  main.cpp  main_server.cpp
documentation/: Doxyfile
documentation/html/: _ava_obj_8cpp.html  _ava_obj_8cpp_8obj_8d.html  _ava_obj_8h.html  _ava_obj_8h.js  _ava_obj_8h_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _controller_box_8cpp_8obj_8d.html  _program_8cpp.html  _program_8cpp_8obj_8d.html  _program_8h.html  _program_8h.js  _program_8h_source.html  _socket_8cpp.html  _socket_8cpp_8obj_8d.html  _socket_8h.html  _socket_8h.js  _socket_8h_source.html  _socket_client_8cpp.html  _socket_client_8cpp_8obj_8d.html  _socket_client_8h.html  _socket_client_8h.js  _socket_client_8h_source.html  annotated.html  annotated_dup.js  class_ava_obj-members.html  class_ava_obj.html  class_ava_obj.js  class_program-members.html  class_program.html  class_program.js  class_receive___state-members.html  class_receive___state.html  class_receive___state.js  class_socket_client-members.html  class_socket_client.html  class_socket_client.js  class_u_d_p_socket-members.html  class_u_d_p_socket.html  class_u_d_p_socket.js  class_w_s_a_session-members.html  (+215 more)
documentation/latex/: _ava_obj_8cpp.tex  _ava_obj_8cpp_8obj_8d.tex  _ava_obj_8h.tex  _ava_obj_8h_source.tex  _program_8h.tex  (+80 more)
include/: AvaObj.h  ControllerBox.h  MPMonitor.h  MPUDPMonitor.h  Program.h  Socket.h  SocketClient.h  SocketMonitor.h  UDPClient.h  definitions.h
source/: AvaObj.cpp  ControllerBox.cpp  MPUPDMonitor.cpp  Program.cpp  Socket.cpp  SocketClient.cpp  SocketMonitor.cpp  UDPClient.cpp
(+86 files in other folders)
